--- a/style.css
+++ b/style.css
@@ -5,6 +5,23 @@ h1 {
 }
 
 
+main{
+    background: url(./img/fundo.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+
+
+
+
+
+
+
 footer {
     background-color: #151916;
+    color: #569D4E;
+    font-size: small;
+    font-weight: bold;
 }
